--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.10.0",
-    "@mantine/core": "^7.10.0",
-    "@mantine/hooks": "^7.10.0",
+    "antd": "^5.18.3",
     "embla-carousel-react": "^7.1.0",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.23.0",
     "ts-node": "^10.9.2"
   },
