--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@mantine/hooks": "^7.10.2",
+    "@types/nodemailer": "^6.4.15",
     "antd": "^5.18.3",
-    "embla-carousel-react": "^7.1.0",
-    "postcss-preset-mantine": "^1.15.0",
-    "postcss-simple-vars": "^7.0.1",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.14",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
