--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src/**/*.tsx"],
+  "include": ["./src/**/*.ts*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
